fix overflow

--- a/style.scss
+++ b/style.scss
@@ -29,6 +29,7 @@ body {
     background-blend-mode: lighten;
     background-position: bottom;
     padding: 20px;
+    overflow: hidden;
     @include on('lg') {
         top: 0;
         bottom: 0;
@@ -159,7 +160,6 @@ form.fade-out {
 
 .message {
     width: 800px;
-    height: 50px;
     font-size: 28px;
     padding: 0 15px;
     background-color: #fff;
@@ -168,13 +168,12 @@ form.fade-out {
     box-shadow: 0 0 3px 0 #FD256B;
     @include on('lg') {
         width: 90vw;
-        height: 100px;
     }
 }
 
 .restart {
     border-radius: 10px;
-    margin-top: 30px;
+    margin-top: 10px;
     background-color: #F3125E;
     font-size: 24px;
 }
